<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/widget55"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/main_mov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/handlerSel_movCtrlButton"></Button>

    <Button
        android:id="@+id/main_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/handlerSel_ButtonCrlButton"></Button>

    <Button
        android:id="@+id/main_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/handlerSel_Demo"></Button>
</TableLayout>
